--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
         });
       };
       document.body.appendChild(script);
+      <!-- Footer Section Start -->
+<footer>
+  <div class="text">
+    <span>Created By <a href="https://github.com/ashwinsk24"> ashwinssk </a> | &#169; 2021 </span>
+  </div>
+</footer>
     </script>
   </body>
 </html>
