--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Shooter 2D</div>
+        <div id="unity-build-title">Shooter 2D by <a href="https://www.github.com/ashwinssk/"><i class="fab fa-github"></i></a></div>
       </div>
     </div>
     <script>
@@ -84,12 +84,5 @@
       };
       document.body.appendChild(script);
     </script>
-      <!-- Footer Section Start -->
-<footer>
-  <div class="text">
-    <span>Created By <a href="https://github.com/ashwinsk24"> ashwinssk </a> | &#169; 2021 </span>
-  </div>
-</footer>
-    
   </body>
 </html>
