--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Shooter 2D by <a href="https://www.github.com/ashwinssk/"><i class="fab fa-github"></i></a></div>
+        <div id="unity-build-title">Shooter 2D by <a href="https://www.github.com/ashwinssk/">ash</a></div>
       </div>
     </div>
     <script>
